# mantis-research

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
config/: example-batch.json
docs/: README.md  architecture.md  batch-config.md  running-batches.md
docs/adr/: 0001-architecture-invariants-baseline.md  0002-reposition-as-agent-researcher-tool.md  0003-epistemic-sidecar-artifact.md  0004-request-level-entry-point.md  0005-primary-brief-selection-in-config.md  0006-batch-scoped-run-layout.md  0007-typed-stage-context.md  0008-research-prompt-templating.md  0009-agent-serving-via-mcp-plugin.md  README.md
docs/feedback/: 2026-07-04-agent-discoverability-0.1.1.md  2026-07-09-docs-overhaul.md  INDEX.md  README.md
docs/method/: README.md  adr-template.md  definition-of-done.md  definition-of-ready.md  method-bindings.md  pre-mortem-prompt.md  reflection-triage.md  review-checklist.md  series-toml-skeleton.md  spec-template.md
docs/specs/: 0001-agent-researcher-pivot.md  0002-agent-serving-mcp-plugin.md  README.md
pr-series/: series.toml
prompts/playbooks/: README.md  claude-research-prompt.md  evaluation-prompt.md  falsification-prompt.md  gemini-research-prompts.md  journal-prompt.md  model-recommendations.md  research-path-recommendation.md  synthesis-prompt.md
scripts/: check_core_purity.py
skills/research/: SKILL.md
src/mantis_research/: __init__.py  __main__.py
src/mantis_research/core/: __init__.py  config.py  logging.py  model_policy.py  paths.py  progress.py  prompts.py  retry.py  settings.py  sidecar.py  stage.py  state.py
src/mantis_research/interface/: __init__.py  orchestrator.py  research_service.py  transcripts.py
src/mantis_research/interface/adapters/: __init__.py  _subprocess.py  claude_cli.py  gemini_cli.py  openrouter_catalog.py  openrouter_http.py
src/mantis_research/interface/cli/: __init__.py  dispatch.py  monitor.py  research.py  run.py  status.py
src/mantis_research/interface/mcp/: __init__.py  __main__.py  server.py
src/mantis_research/interface/stages/: __init__.py  claude_prior.py  claude_research.py  evaluation.py  falsification.py  gemini_research.py  journal_passes.py  openrouter_research.py  synthesis.py
tests/: conftest.py
tests/data/golden_state/: claude.json  falsification.json  gemini.json  journal_passes.json  openrouter.json  synthesis.json
tests/integration/: test_claude_research_stage.py  test_eval_stages.py  test_orchestrator.py  test_research_cmd.py  test_status_monitor.py  test_synthesis_journal_gating.py  test_synthesis_sidecar.py
tests/unit/: test_agent_serving_docs.py  test_claude_cli_adapter.py  test_config.py  test_config_corpus.py  test_core_purity.py  test_disabled_stages.py  test_dispatch_seam.py  test_mcp_server.py  test_model_policy.py  test_openrouter_adapter.py  test_openrouter_catalog.py  test_openrouter_usage.py  test_paths.py  test_plugin_manifest.py  test_progress.py  test_research_prompt.py  test_retry.py  test_sidecar.py  test_stage_preflight.py  test_state.py  test_state_golden.py  test_synthesis_primary.py
