[build-system]
requires = ["uv_build>=0.11,<1"]
build-backend = "uv_build"

[project]
name = "mantis-research"
version = "0.1.1"
description = "Deep-research tool for agents — fan one question across several models, cross-check them into one synthesis, and emit an epistemic sidecar (claims, divergences, verification queue)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "grimaldost", email = "grimaldosj93@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "typer>=0.13",
    "httpx>=0.28",
    "mcp>=1.28.1",
]

[project.scripts]
mantis = "mantis_research.interface.cli:app"
mantis-mcp = "mantis_research.interface.mcp.__main__:main"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "security" },
    "pre-commit",
]
lint = [
    "ruff>=0.15",
    "ty",
]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
]
security = [
    "pip-audit",
]

# ── Ruff ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
exclude = [".git", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "B",         # flake8-bugbear
    "S",         # flake8-bandit
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "C4",        # comprehensions
    "ISC",       # implicit-str-concat
    "SIM",       # simplify
    "T20",       # no-print
    "PT",        # pytest-style
    "Q",         # quotes
    "RUF",       # ruff-specific
    "ANN",       # annotations
    "ASYNC",     # async
    "TC",        # type-checking
]
ignore = [
    "ANN401",   # allow Any in narrow places
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["mantis_research"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ANN"]
"scripts/**" = ["ALL"]
"batches/**" = ["ALL"]
# prompts.py contains long natural-language template strings — line length
# rule does not apply to inline prompt content.
"src/mantis_research/core/prompts.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Mypy (CI fallback) ───────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
pretty = true

# ── Pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (need external CLIs / network)",
]
